--- a/dna.html
+++ b/dna.html
@@ -23,8 +23,9 @@ $(document).ready(function() {
 
         var z = dna(x);
 
-        $("#display").html(z);
+        $("#display").html("Output: " + z);
 
+        $("#old").html("Input: " + x);
 
     });
 });
@@ -85,6 +86,8 @@ html,body {
     <button class="btn btn-primary btn-lg"id="rabbit">Get Match</button>
     <div>
     </br>
+    <div id="old">
+    </div>
     <div id="display">
     </div>
 </body>
